--- a/app/modules/goals/views/goal.html
+++ b/app/modules/goals/views/goal.html
@@ -3,6 +3,10 @@
 		<div class="row">
 			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover" ng-click=startGoalAdd('retirement')>
 				<div class="goals-cover">
+					<div class="checkbox-cover-delete" ng-if="$root.goalAnswered['retirement']" ng-click="deleteGoal('retirement')">
+						<label><span></span></label>
+						
+					</div>
 						<div class="image-div">
 							<img src="assets/images/retirement.png">
 						</div>
@@ -15,6 +19,10 @@
 			</div>
 			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover" ng-click=startGoalAdd('education')>
 				<div class="goals-cover">
+				<div class="checkbox-cover-delete" ng-if="$root.goalAnswered['education']" ng-click="deleteGoal('education')">
+						<label><span></span></label>
+						
+					</div>
 					<div class="image-div">
 						<img src="assets/images/education.png">
 					</div>
@@ -27,6 +35,10 @@
 			</div>
 			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover" ng-click=startGoalAdd('property')>
 				<div class="goals-cover">
+				<div class="checkbox-cover-delete" ng-if="$root.goalAnswered['property']" ng-click="deleteGoal('property')">
+						<label><span></span></label>
+						
+					</div>
 					<div class="image-div">
 						<img src="assets/images/property.png">
 					</div>
@@ -39,6 +51,10 @@
 			</div>
 			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover" ng-click=startGoalAdd('automobile')>
 				<div class="goals-cover">
+				<div class="checkbox-cover-delete" ng-if="$root.goalAnswered['automobile']" ng-click="deleteGoal('automobile')">
+						<label><span></span></label>
+						
+					</div>
 					<div class="image-div">
 						<img src="assets/images/automobile.png">
 					</div>
@@ -55,6 +71,10 @@
 		<div class="row">
 			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover" ng-click=startGoalAdd('vacation')>
 				<div class="goals-cover">
+						<div class="checkbox-cover-delete" ng-if="$root.goalAnswered['vacation']" ng-click="deleteGoal('vacation')">
+						<label><span></span></label>
+						
+					</div>
 						<div class="image-div">
 							<img src="assets/images/vacation.png">
 						</div>
@@ -67,6 +87,10 @@
 			</div>
 			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover" ng-click=startGoalAdd('wedding')>
 				<div class="goals-cover">
+				<div class="checkbox-cover-delete" ng-if="$root.goalAnswered['wedding']" ng-click="deleteGoal('wedding')">
+						<label><span></span></label>
+						
+					</div>
 					<div class="image-div">
 						<img src="assets/images/wedding.png">
 					</div>
@@ -79,6 +103,10 @@
 			</div>
 			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover" ng-click=startGoalAdd('event')>
 				<div class="goals-cover">
+				<div class="checkbox-cover-delete" ng-if="$root.goalAnswered['event']" ng-click="deleteGoal('event')">
+						<label><span></span></label>
+						
+					</div>
 					<div class="image-div">
 						<img src="assets/images/others.png">
 					</div>
@@ -91,6 +119,10 @@
 			</div>
 			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover" ng-click=startGoalAdd('jewellery')>
 				<div class="goals-cover">
+				<div class="checkbox-cover-delete" ng-if="$root.goalAnswered['jewellery']" ng-click="deleteGoal('jewellery')">
+						<label><span></span></label>
+						
+					</div>
 					<div class="image-div">
 						<img src="assets/images/luxurious.png">
 					</div>
