--- a/less/modal.less
+++ b/less/modal.less
@@ -147,3 +147,12 @@
 		}
 	}
 }
+
+.goal-ngdialog-overlay{
+	.modal-content {
+		float:none;
+		.modal-wrapper .login-header .cloud2{
+			top:0px;
+		}
+	}
+}
