--- a/less/swiper.less
+++ b/less/swiper.less
@@ -219,6 +219,10 @@
               margin-left: 5px;
               margin-right: 5px;
             }
+            &.risk-age{
+              width: 15%;
+              left: 0;
+            }
             &.year{
               width:10%;
               margin-left: 5px;
@@ -242,6 +246,7 @@
                 }
               }
             }
+
             input:not(.datepicker){
               .GLOBAL_FONT_STYLE('PlayfairDisplay-Regular',@marinerapprox,normal);
               .PIXEL2EM(20)!important;
@@ -264,6 +269,12 @@
               right:0;
             }
           }
+          &.risk-options{
+              color: rgb( 36, 122, 188 );
+            }
+            &.risk-questions{
+              padding-top:3%;
+            }
           &.multiple{
             .GLOBAL_FONT_STYLE('PlayfairDisplay-Regular',@blackapprox,normal)!important;
             .PIXEL2EM(30)!important;
