--- a/less/dashboard.less
+++ b/less/dashboard.less
@@ -124,6 +124,38 @@ section{
 					}
 				}
 			}
+			.checkbox-cover-delete{
+				width: 100%;
+    			float: left;
+				label{
+					opacity:1;
+					span{
+						    position: absolute;
+    						height: 30px;
+    width: 30px;
+    
+    right: 0;
+    margin: 0 auto;
+    top: -12px;
+    vertical-align: middle;
+    background-color: #fff;
+    opacity: 1;
+    background-position: center;
+    background-size: 45% 36%;
+    -moz-background-size: 45% 36%;
+    -o-background-size: 45% 36%;
+    background-size: 50% 52%;
+    z-index: 100;
+    background-repeat: no-repeat;
+    -webkit-box-shadow: 0px 1px 4px 0px #1a78b9;
+    -moz-box-shadow: 0px 1px 4px 0px #1a78b9;
+    box-shadow: 0px 1px 4px 0px #1a78b9;
+    background-image: url(../images/deletegoal.png);
+    border-radius: 50%;
+
+					}
+				}
+			}
 			@media @below768{
 				width:100%;
 				margin-right:0px;
