--- a/app/modules/investwithdraw/views/reviewInvestment.html
+++ b/app/modules/investwithdraw/views/reviewInvestment.html
@@ -86,5 +86,5 @@
 </div>
 <div class="fin-btn-group addMargin investStep1">
     <button click-redirect="/educationStarted" class="fin-link-btn content-prev"><span><img src="assets/images/startedArrow.png"></span>CONTINUE PLANING</button>
-    <button click-redirect="/dashboard" class="fin-app-btn fin-orange">PAY & INVEST</button>
+    <button ng-click="payInvest(overall_total_sum)" class="fin-app-btn fin-orange">PAY & INVEST</button>
 </div>
