--- a/app/modules/planinvestment/views/planinvest.html
+++ b/app/modules/planinvestment/views/planinvest.html
@@ -22,8 +22,8 @@
 				</div>
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 invest-outer-cover">
-				<div class="investCover">
-					<div class="checkbox-cover" >
+				<div class="investCover" ng-class="{'has-covered': $root.finGoalAnswered == true}">
+					<div class="checkbox-cover" ng-if="$root.finGoalAnswered">
 						<input type="radio" name>
 						<label><span></span></label>
 					</div>
