--- a/less/modal.less
+++ b/less/modal.less
@@ -149,10 +149,65 @@
 }
 
 .goal-ngdialog-overlay{
-	.modal-content {
-		float:none;
-		.modal-wrapper .login-header .cloud2{
-			top:0px;
-		}
+	.ngdialog-content{
+			background:none !important;
+				.error-popup-container{
+
+    position: relative;
+    background-color: #fff;
+    -webkit-background-clip: padding-box;
+    background-clip: padding-box;
+  
+    border-radius: 6px;
+    outline: 0;
+   
+   
+    		.erorr-popup-wrapper {
+    			    float: left;
+    width: 100%;
+    -webkit-border-radius: 25px;
+    -moz-border-radius: 25px;
+    border-radius: 25px;
+    background-image: -moz-linear-gradient(90deg, #f5f5f5 0%, #ffffff 100%);
+    background-image: -webkit-linear-gradient(90deg, #f5f5f5 0%, #ffffff 100%);
+    -webkit-box-shadow: 2.5px 4.33px 10px 0px #247abc;
+    -moz-box-shadow: 2.5px 4.33px 10px 0px #247abc;
+    box-shadow: 2.5px 4.33px 10px 0px #247abc;
+    padding: 16% 10% 8% 10%;
+    .login-header {
+    	img{
+    		width:100%;
+    	}
+    	.cloud1{
+    		    top: 0px;
+    			left: 3%;
+
+    	}
+    	.cloud2{
+    		    bottom: -30%;
+    left: 0;
+    right: 0;
+    margin: auto;
+    	}
+    	.cloud2, .cloud1 {
+			       position: absolute;
+    		width: 20%;
+
+    	}
+    	.plane{
+    		width: 38%;
+    	}
+    	p{
+    		    font-family: 'PlayfairDisplay-Regular';
+    color: #101010;
+    font-weight: normal;
+    font-size: 1.5em;
+    margin-left: 10%;
+    margin-top: 9%;
+    	}
+    }
+				}
+    		}
 	}
+	
 }
